objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Indicator__c</fullName>
        <formula>IF(ISPICKVAL(Decision__c , &quot;Low Risk&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/sekkyumu/developpers/32/Green-Ball-icon.png&quot;, &quot;Low Risk&quot;),

IF(ISPICKVAL(Decision__c , &quot;Intermediate Risk&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/sekkyumu/developpers/32/Yellow-Ball-icon.png&quot;, &quot;Intermediate Risk&quot;),

IF(ISPICKVAL(Decision__c , &quot;High Risk&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/sekkyumu/developpers/32/Red-Ball-icon.png&quot;, &quot;High Risk&quot;),

IF(ISPICKVAL(Decision__c, &quot;Null&quot;), null,null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R01_Current_Referral_for_Neglect__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the current referral for Neglect?</inlineHelpText>
        <label>R01 - Current Referral for Neglect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R02_Motivation_to_Improve_Parenting__c</fullName>
        <inlineHelpText>What is the primary caregiver&apos;s motivation to improve their parenting skills?</inlineHelpText>
        <label>R02 - Motivation to Improve Parenting</label>
        <picklist>
            <picklistValues>
                <fullName>Motivated and Realistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmotivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivated but Unrealistic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R03_Response_to_Investigation__c</fullName>
        <inlineHelpText>What was the overall attitude of the primary caregiver observed during the investigation?</inlineHelpText>
        <label>R03 - Response to Investigation</label>
        <picklist>
            <picklistValues>
                <fullName>Attitude consistent w seriousness of allegation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attitude not consistent w seriousness of allegation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed to comply satisfactorily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Score__c</fullName>
        <formula>if (R01_Current_Referral_for_Neglect__c  = TRUE ,1,0) + 

CASE(R02_Motivation_to_Improve_Parenting__c , 
&apos;Motivated and Realistic&apos;, 0, 
&apos;Motivated but Unrealistic&apos;, 3, 
&apos;Unmotivated&apos;, 5, 0) + 

CASE(R03_Response_to_Investigation__c , 
&apos;Attitude consistent w seriousness of allegation&apos;, 0, 
&apos;Attitude not consistent w seriousness of allegation&apos;, 3, 
&apos;Failed to comply satisfactorily&apos;, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Family Risk Assessment Score formula based on &quot;California Risk Assessment Scale&quot; - https://www.ncjrs.gov/html/ojjdp/jjbul2001_7_1/figure5.pdf and https://www.ncjrs.gov/html/ojjdp/jjbul2001_7_1/page4.html#figure5</inlineHelpText>
        <label>Risk Assessment Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S01_Serious_Physical_Harm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The caregiver or perpetrator has caused serious physical harm or made a plausible threat to cause physical harm to a child as indicated by: Serious injury or abuse to the child other than accidental. Caregiver fears he/she will maltreat the child.</inlineHelpText>
        <label>S01 - Serious Physical Harm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S02_Previous_History_of_Maltreatment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The severity of previous maltreatment or the employer/caregiver’s response to previous incidents AND current circumstances suggest that the child’s safety may be an immediate concern.</inlineHelpText>
        <label>S02 - Previous History of Maltreatment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S03_Failure_to_Protect_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The caregiver/employer has failed to protect the child from serious harm or threatened harm by others, OR current circumstances suggest that the caregiver would likely be unable to protect the child from serious harm by others if the child were returned</inlineHelpText>
        <label>S03 - Failure to Protect Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_Assessment_Score__c</fullName>
        <formula>if (S01_Serious_Physical_Harm__c = TRUE ,1,0) +
if (S02_Previous_History_of_Maltreatment__c = TRUE ,1,0) +
if (S03_Failure_to_Protect_Child__c = TRUE ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Safety Assessment Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assessment_Date__c</columns>
        <columns>Referral__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Decision__c</columns>
        <columns>Decision_Indicator__c</columns>
        <columns>Safety_Assessment_Score__c</columns>
        <columns>Risk_Assessment_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASSESS-{000000}</displayFormat>
        <label>Assessment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <recordTypes>
        <fullName>Risk_Assessment</fullName>
        <active>true</active>
        <description>To assess family needs and strengths as they releate to neglect, abuse, maltreatment and overall risk</description>
        <label>Risk Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Safety_Assessment</fullName>
        <active>true</active>
        <description>Initial Child Safety Assessment to determine the initial referral intake priority and response timeline</description>
        <label>Safety Assessment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>